--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 8080:80
     environment:
       WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: ranjit
+      WORDPRESS_DB_USER: kshitij
       WORDPRESS_DB_PASSWORD_FILE: /run/secrets/db_password
       WORDPRESS_DB_NAME: wpdb
     secrets:
@@ -24,7 +24,7 @@ services:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: wpdb
-      MYSQL_USER: ranjit
+      MYSQL_USER: kshitij
       MYSQL_PASSWORD_FILE: /run/secrets/db_password
       MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
     secrets:
@@ -42,7 +42,7 @@ services:
     ports:
       - 8282:80
     environment:
-      MYSQL_USER: ranjit
+      MYSQL_USER: kshitij
       MYSQL_PASSWORD_FILE: /run/secrets/db_password
       MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
     secrets:
